# ec-issuer

./: .containerignore  .env.example  .gitignore  AGENTS.md  API_EXAMPLES.md  ARCHITECTURE.md  Cargo.toml  Dockerfile  Justfile  README.md  compose.yaml  pyproject.toml
.agent/skills/adr/: SKILL.md
.agent/skills/python-tdd/: deep-modules.md  interface-design.md  mocking.md
.agents/skills/adr/: SKILL.md
.agents/skills/docs-writer/: SKILL.md
.agents/skills/python-tdd/: SKILL.md  refactoring.md  tests.md
.github/workflows/: dependency-services.yml  documentation.yml  python-ci.yml  rust-ci.yml
crates/adapters/: Cargo.toml
crates/adapters/src/: clients.rs  events.rs  lib.rs  repository.rs  signing.rs
crates/adapters/src/http/: errors.rs  handlers.rs  mod.rs  routes.rs
crates/domain/: Cargo.toml
crates/domain/src/: entities.rs  errors.rs  lib.rs  value_objects.rs
crates/ports/: Cargo.toml
crates/ports/src/: inbound.rs  lib.rs  outbound.rs  services.rs
crates/serializers/: Cargo.toml
crates/serializers/src/: elm.rs  lib.rs  ob3.rs
dependencies/platypus/: Dockerfile  ssi-agent-mock.yaml
dependencies/prism/: awards-mock.yaml  oidc-auth-mock.yaml  ssi-agent-mock.yaml
docs/: ADR002-abc-over-protocol.md  API.md  ARCHITECTURE.md  FEATURES.md  GLOSSARY.md  book.toml  ports_adapters.py  ports_adapters_test.py
docs/api/: index.html  openapi.yaml
docs/src/: SUMMARY.md  adr.md  agent_context.md  api.md  architecture.md  configuration.md  credential_configuration.md  definition_of_done.md  e2e_testing.md  features.md  glossary.md  import_in_wallet.md  oidc4vci_issuer_agent.md  openbadge_credential_configuration.json  ports_adapters.md  ports_adapters.py  ports_adapters_test.md  ports_adapters_test.py  python_reference.md  test_doubles.md
docs/src/adr/: ADR001-python.md  ADR002-abc-over-protocol.md  ADR003-ssi-agent-as-peer-service.md  ADR004-database-library.md
docs/src/agents/: skills
src/: __init__.py  cli.py  config.py  config.rs  logging.rs  main.py  main.rs  web.py
src/access_control/: access_control_port.py  hardcoded_adapter.py
src/api/: __init__.py  api_port.py  http_adapter.py
src/awards/: __init__.py  award_service.py  awards_client_port.py  awards_service_port.py  http_awards_client_adapter.py  models.py
src/config/: config.py  config_port.py
src/credential_configurations/: __init__.py  credential_configurations_client_port.py  credential_configurations_service.py  models.py  ssi_agent_credential_configurations_client_adapter.py
src/credentials/: credential.py  credential_service.py
src/issuer_agent/: __init__.py  hardcoded_adapter.py  issuer_agent_port.py  ssi_agent_adapter.py
src/issuer_agent_adapter/: __init__.py  hardcoded_adapter.py  proxy_adapter.py
src/lib/: http_client.py  postgresql_base.py
src/metadata/: __init__.py  metadata.py  metadata_repository.py  metadata_service.py  postgresql_adapter.py  ssi_agent_metadata_adapter.py
src/offers/: in_memory_adapter.py  models.py  offer_repository.py  offer_service.py  offers_client_port.py  offers_repository_port.py  postgresql_adapter.py  postgresql_offers_repository_adapter.py  ssi_agent_offers_client_adapter.py
src/sysadmin/: __init__.py  commandline_adapter.py  sysadmin_cli_adapter.py  sysadmin_port.py  sysadmin_service.py
tests/: conftest.py  e2e_tests.rs
tests/e2e/: Dockerfile.platypus  __init__.py  conftest.py  ssi-agent-mock.yaml  test_cli.py  test_e2e.py  test_infrastructure.py  test_metadata.py  test_offer.py  test_oid4vci.py
tests/e2e/fixtures/: credential.json  credential_configuration_full.json  credential_configuration_input.json  credential_configuration_minimal.json  issuer_metadata.json
tests/e2e/keys/: README.md  issuer_eddsa.priv  issuer_eddsa.pub  wallet_holder_eddsa.priv  wallet_holder_eddsa.pub
tests/e2e/schemas/: create_offer_response.json  credential_issuer_metadata.json  credential_offer.json  credential_response.json  did_document.json
tests/e2e/support/: __init__.py  admin_client.py  browser.py  config.py  credential_issuer_metadata.py  http_client.py  utilities.py  verifier.py  wallet.py
tests/integration/: conftest.py  test_offer_awards_interaction.py  test_postgresql_metadata_repository.py  test_postgresql_offers_repository.py  test_ssi_agent_offers_client_adapter.py
tests/unit/: test_config.py  test_doubles.py  test_env_config_repo.py  test_metadata.py  test_proxy_adapter.py
tests/unit/api/: conftest.py  test_http_adapter.py
tests/unit/awards/: __init__.py  test_http_awards_client_adapter.py
tests/unit/credential_configurations/: __init__.py  test_models.py  test_ssi_agent_credential_configurations_client_adapter.py
tests/unit/issuer_agent/: test_ssi_agent_adapter.py
tests/unit/metadata/: test_credential_issuer_metadata.py  test_ssi_agent_metadata_adapter.py
tests/unit/offers/: test_offer_service.py  test_ssi_agent_offers_client_adapter.py
tests/unit/support/: requests_doubles.py  test_doubles.py
