[package]
name = "educredentials-hexagonal-credential-service"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[workspace]
members = [
    ".",
    "crates/domain",
    "crates/ports",
    "crates/serializers",
    "crates/adapters",
]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# HTTP Server
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }

# gRPC
tonic = "0.11"
prost = "0.12"

# Configuration
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

[dependencies]
# Workspace crates
credential-domain = { path = "crates/domain" }
credential-ports = { path = "crates/ports" }
credential-serializers = { path = "crates/serializers" }
credential-adapters = { path = "crates/adapters" }

# External dependencies
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
config = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono.workspace = true

[dev-dependencies]
mockall = "0.12"
