[package]
name = "ec-issuer"
version = "0.1.1"
edition = "2021"
rust-version = "1.75"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

# HTTP Server
axum = { version = "0.7", features = ["macros"] }

# Configuration
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[features]
default = ["logging-text"]
logging-text = []
logging-json = []

[dev-dependencies]
assert_cmd = "2.1.2"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.35", features = ["full"] }
portpicker = "0.1"
