[project]
name = "ec-issuer"
version = "0.6.0"
description = "Educredentials Issuer"
authors = [{ name = "Bèr Kessels", email = "ber@berk.es" }]
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "jwcrypto>=1.5.7",
    "msgspec>=0.20.0",
    "prometheus-flask-exporter>=0.23.2",
    "psycopg[binary]>=3.2.0",
    "psycopg-pool>=3.2.0",
    "requests>=2.32.5",
    "pkce>=1.0.3",
]

[project.scripts]
ec-issuer-cli = "src.cli:main"
ec-issuer-web = "src.web:main"

[dependency-groups]
dev = [
    "basedpyright>=1.38.4",
    "jsonpath-ng>=1.8.0",
    "jsonschema>=4.26.0",
    "pdoc>=16.0.0",
    "pyjwt[crypto]>=2.12.1",
    "pytest>=9.0.3",
    "pytest-cov>=4.0.0",
    "ruff>=0.15.4",
    "types-requests>=2.32.4.20260107",
]

[build-system]
requires = ["uv_build>=0.11.18,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "src"
module-root = ""

[tool.ruff.lint]
select = ["E", "F"]
exclude = ["Justfile"]

[tool.basedpyright]
typeCheckingMode = "recommended"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
faulthandler_timeout = "5"
faulthandler_exit_on_timeout = true
markers = [
    "e2e: end-to-end tests",
    "integration: integration tests",
    "unit: unit tests",
]
