[package]
name = "credential-adapters"
version = "0.1.0"
edition = "2021"

[dependencies]
credential-domain = { path = "../domain" }
credential-ports = { path = "../ports" }

async-trait = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
mockall = "0.12"

[build-dependencies]
tonic-build = "0.11"
