[package]
name = "credential-domain"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies - NO infrastructure dependencies
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
validator = { workspace = true }

[dev-dependencies]
