[package]
name = "credential-serializers"
version = "0.1.0"
edition = "2021"

[dependencies]
credential-domain = { path = "../domain" }
credential-ports = { path = "../ports" }

serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
